syntax = "proto3";

package crud_grpc;
option go_package = "/pb";

service CrudService{
    rpc GetList(Empty)  returns(PostList);
    rpc GetPost(PostRequestId) returns(Post);
    rpc Update(PostUpdate) returns(Result);
    rpc Delete(PostRequestId) returns(Empty);
}

message Empty{}

message PostRequestId{
    int64 id = 1;
}

message Post{
    int64 id = 1;
    int64 userId = 2;
    string title = 3;
    string body = 4;
}

message PostUpdate{
    int64 id = 1;
    string title = 2;
    string body = 3;
}

message PostList{
    repeated Post post = 1;
}

message Result{
    bool success = 1;
    string message = 2;
}
